<resources>
    <string name="app_name">RCS RI</string>
    <string name="menu_about">About</string>
    <string name="label_ab_not_found">The address book is not found, launch it manually from your device home screen.</string>
    <string name="label_wait_cnx_start">Initializing…</string>
    <string name="label_service_not_available">The service is not available. Please retry later.</string>
    <string name="label_confirm_close">Do you confirm ?\nThis will close the session.</string>
    <string name="menu_close_session">Quit</string>
    <string name="menu_clear_log">Clear log</string>
    <string name="menu_sync_cms">Synchronize</string>
    <string name="label_file_size">Size: %1$s Kb</string>
    <string name="label_command_in_progress">Command in progress…</string>
    <string name="label_session_not_found">Session not found</string>
    <string name="label_api_not_compatible">API is not compatible</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_accept">Accept</string>
    <string name="label_decline">Decline</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_from_args">From: %s</string>
    <string name="label_with_args">With: %s</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_load_log_failed">Database access has failed</string>
    <string name="label_log_empty">No entry</string>
    <string name="label_incoming">incoming</string>
    <string name="label_outgoing">outgoing</string>
    <string name="label_direction_unknown">unknown direction</string>
    <string name="label_state_unknown">unknown</string>
    <string name="label_reason_unknown">unknown</string>
    <string name="label_state_delivered_at">Delivered at %s</string>
    <string name="label_state_displayed_at">Displayed at %s</string>
    <string name="label_status">Status: %s</string>
    <string name="label_reason_code_args">Reason: %s</string>
    <string name="label_reason_code">Reason:</string>
    <string name="label_session_state">State: %s</string>
    <string name="label_session_reason">Reason: %s</string>
    <string name="label_session_date">Date: %s</string>
    <string name="label_direction">Direction: %s</string>
    <string name="label_filename">File: %s</string>
    <string name="label_filesize">Size: %s bytes</string>
    <string name="label_progress_status">Status:</string>
    <string name="label_progress_bar">Progress:</string>
    <string name="label_file">Selected file:</string>
    <string name="label_size">Size:</string>
    <string name="label_receive_image">Received image %1$s from %2$s</string>
    <string name="label_remote">Remote contact:</string>
    <string name="label_select_file">Select file</string>
    <string name="label_invalid_contacts">Invalid list of participants</string>
    <string name="label_uninitialized_contact">+33XXXXXXX</string>
    <string name="label_uninitialized_text">blah, blah, blah</string>
    <string name="label_uninitialized_date">date</string>
    <string name="label_uninitialized_filename">filename</string>
    <string name="label_uninitialized_filesize">filesize</string>
    <string name="label_uninitialized_direction">direction</string>
    <string name="error_api_permission_denied">RCS API permission denied</string>
    <string name="label_todo">Feature not yet implemented</string>
	<string name="error_not_registered">Not registered to IMS</string>
    <string name="label_about_title">Reference Implementation</string>
    <string name="label_about_release">Release: %s</string>
    <string name="label_about_api">API release: %s</string>
    <string name="label_quick_chat">Chat</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_address_book">Native address book</string>
    <string name="menu_list_rcs_contacts">All RCS contacts</string>
    <string name="label_ext_tag">Extension tag:</string>
    <string name="menu_contact_vcard">Contact visit card</string>
    <string name="label_vcard">Visit card:</string>
    <string name="label_show_vcard">Show card</string>
    <string name="menu_blocking_contact">Block contact</string>
    <string name="label_block">Block</string>
    <string name="label_unblock">Unblock</string>
    <string name="label_contact_blocked">%s has been blocked</string>
    <string name="label_contact_unblocked">%s has been unblocked</string>
    <string name="label_is_blocked">Is blocked:</string>
    <string name="label_is_online">On line:</string>
    <string name="label_block_timestamp">Blocking time:</string>
    <string name="menu_capabilities">Capabilities</string>
    <string name="menu_my_capabilities">My capabilities</string>
    <string name="menu_capabilities_request">Request capabilities</string>
    <string name="menu_refresh_capabilities">Refresh all capabilities</string>
    <string name="menu_capabilities_log">Capabilities log</string>
    <string name="label_refresh_success">Contacts will been refreshed in background</string>
    <string name="label_capabilities">Capabilities:</string>
    <string name="label_refresh_all_capabilities">This command permits to force an update of capabilities for each contact in the address book. This may take a long time if there is a lof of contacts.</string>
    <string name="label_capabilities_video">Video sharing</string>
    <string name="label_capabilities_image">Image sharing</string>
    <string name="label_capabilities_ft">File transfer</string>
    <string name="label_capabilities_im">IM session</string>
    <string name="label_capabilities_extensions">Extensions:</string>
    <string name="label_request_in_background">Request has been sent in background for %s</string>
    <string name="label_capabilities_empty">No capabilities</string>
    <string name="label_contact">Contact %s</string>
    <string name="label_capabilities_geolocation_push">Geolocation push</string>
    <string name="label_automata">Automata:</string>
    <string name="label_capabilities_timestamp">Last refresh:</string>
    <string name="label_no_capabilities">No capabilities for %s</string>
    <string name="menu_messaging">Messaging</string>
    <string name="menu_file_transfer">File transfer</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_transfer_file">Transfer a file</string>
    <string name="menu_file_transfer_log">File transfer log</string>
    <string name="title_recv_file_transfer">File transfer invitation</string>
    <string name="title_file_transfer">File transfer</string>
    <string name="label_transfer_failed">Transfer failed (%1$s)</string>
    <string name="label_transfer_aborted">Transfer aborted (%1$s)</string>
    <string name="label_transfer_cancelled">File transfer session has been cancelled</string>
    <string name="label_transfer_rejected">Transfer rejected (%1$s)</string>
    <string name="label_pause_transfer">Pause</string>
    <string name="label_resume_transfer">Resume</string>
    <string name="label_pause_failed">Pause of File Transfer has failed</string>
    <string name="label_resume_failed">Resume of File Transfer has failed</string>
    <string name="label_transfer_failed_too_big">Transfer is aborted because file is too big</string>
    <string name="label_transfer_failed_capacity_too_small">Not enough free space on device storage for File Transfer</string>
    <string name="label_transfer_session_has_expired">Session has expired (timeout or any other error)</string>
    <string name="label_ft_state_changed">%1$s (%2$s)</string>
    <string name="label_ft_from_size">From: %1$s\nSize: %2$s Kb</string>
    <string name="menu_ft_config">File transfer configuration</string>
    <string name="label_ft_WarnSize">File size warning:</string>
    <string name="label_ft_MaxSize">Max file size:</string>
    <string name="label_ft_isAutoAccept">AA enabled:</string>
    <string name="label_ft_isAutoAcceptInRoaming">AA enabled in roaming:</string>
    <string name="label_MaxFileTransfers">Max file transfers:</string>
    <string name="label_GroupFileTransferSupported">Group supported:</string>
    <string name="menu_file_transfer_config">File transfer service configuration</string>
    <string name="label_ft_ImageResizeOption">Image resize option:</string>
    <string name="label_expiration">Expiration:</string>
    <string name="label_expiration_args">Expiration: %s</string>
    <string name="label_ft_start_file_transfer">Start transfer</string>
    <string name="label_ft_filesize">Size:</string>
    <string name="label_ft_not_allowed">Not allowed to transfer file(s)</string>
    <string name="title_multi_file_transfer">Multiple file transfer</string>
    <string name="label_pause_ft_not_allowed">Cannot pause HTTP file transfer</string>
    <string name="label_resume_ft_not_allowed">Cannot resume HTTP file transfer</string>
    <string name="label_delete_file_transfer_success">File transfers with contact %1$s deleted</string>
    <string name="menu_initiate_chat">Initiate single chat</string>
    <string name="menu_initiate_group_chat">Initiate group chat</string>
    <string name="menu_chat_log">Chat log</string>
    <string name="menu_chat_config">Chat service configuration</string>
    <string name="menu_group_chat_log">Group chat log</string>
    <string name="label_invite">Invite</string>
    <string name="title_recv_chat">Chat from %s</string>
    <string name="title_recv_group_chat">Group chat from %s</string>
    <string name="title_group_chat">Group chat</string>
    <string name="title_chat">Chat with %s</string>
    <string name="title_chat_exit">Are you sure to quit the session?</string>
    <string name="label_chat_aborted">Chat session aborted (%1$s)</string>
    <string name="label_chat_rejected">Chat session rejected (%1$s)</string>
    <string name="menu_insert_smiley">Smiley</string>
    <string name="menu_participants">Participants</string>
    <string name="menu_add_participant">Add participant</string>
    <string name="label_chat_failed">Chat session failed (%1$s)</string>
    <string name="label_contacts">Contacts:</string>
    <string name="label_contact_is_composing">%1$s is typing…</string>
    <string name="label_select_contacts">Select contacts</string>
    <string name="label_chat_initiation_canceled">Chat session has been canceled</string>
    <string name="label_select_quicktext">Quick text</string>
    <string name="menu_quicktext">Quick text</string>
    <string name="label_continue_chat_failed">Can\'t continue the conversation: RCS service is not available</string>
    <string name="label_delete_chat_failed">Delete chat conversation failed</string>
    <string name="label_delete_chat_success">Chat with contact %1$s deleted</string>
    <string name="label_delete_gchat_success">Group chat successfully deleted</string>
    <string name="label_subject">Subject: </string>
    <string name="label_subject_notif">Subject: %s</string>
    <string name="menu_send_file">Send file</string>
    <string name="menu_showus_map">Show us in a map</string>
    <string name="menu_send_geoloc">Send geoloc</string>
    <string name="menu_send_message">Send</string>
    <string name="hint_type_message">Enter your message ... </string>
    <string name="label_xms_list_empty">No XMS message</string>
    <string name="menu_settings">Settings</string>
    <string name="ri_settings_title_resend_chat">Switch failed RCS to SMS</string>
    <string name="ri_settings_summary_resend_chat">Switch RCS to SMS in case of chat failure</string>
    <string name="ri_settings_title_resend_ft">Switch failed RCS to MMS</string>
    <string name="ri_settings_summary_resend_ft">Switch RCS to MMS in case of image transfer failure</string>
    <string name="ri_settings_summary_sync_mode">Set the CMS synchronization mode</string>
    <string name="ri_settings_title_sync_mode">CMS synchronization</string>
</resources>