<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_sync_cms"
        android:title="@string/menu_sync_cms"/>

    <item
        android:id="@+id/menu_insert_smiley"
        android:title="@string/menu_insert_smiley"/>
    <item
        android:id="@+id/menu_participants"
        android:title="@string/menu_participants"/>
    <item
        android:id="@+id/menu_add_participant"
        android:title="@string/menu_add_participant"/>
    <item
        android:id="@+id/menu_quicktext"
        android:title="@string/menu_quicktext"/>
    <item
        android:id="@+id/menu_send_file"
        android:title="@string/menu_send_file"/>
    <item
        android:id="@+id/menu_send_geoloc"
        android:title="@string/menu_send_geoloc"/>
    <item
        android:id="@+id/menu_showus_map"
        android:title="@string/menu_showus_map"/>
    <item
        android:id="@+id/menu_close_session"
        android:title="@string/menu_close_session"/>

</menu>